frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.css
.my-custom-class .tooltip-inner {
    color: #000;
    background: #fff;
    background-color: #fff;
	border:1px solid #000;
}
  .my-custom-class .arrow::before {
      border-top-color: #000;
}
.my-custom-class .tooltip.show {
    opacity: 10 !important;
}
.tooltip.show {
    opacity: 10 !important;
}
.my-custom-classes .tooltip-inner {
    color: #000;
    background: #fff;
    background-color: #fff;
	border:1px solid #000;
}
  .my-custom-classes .arrow::before {
      border-top-color: #000;
}
.knldge{
	cursor:pointer;
	font-size: 14px;
    font-weight: 600;
}

.skils-short:last-child {
  border-right: none !important;
}
.handsExps:hover{
		overflow-x:auto !important;
		    text-overflow: clip !important;
	}
	.btn-fltr {
    color: #212529;
    background-color: #f8f9fa;
    border-color: #f8f9fa;
    margin-right: 3px;
    margin-bottom: 14px;
    font-size: 12px;
    height: 26px;
    padding: .25rem .435rem;
}
.btn-fltr:hover {

    color: #000;
    background-color: #e2e6ea;
    border-color: #dae0e5;
}
.btn-fltr-active {
    background-color: #e2e6ea;
    border-color: #dae0e5;
    color: #000;
}
.top-pad{
	/*top: -50px !important;*/
}.top-pad-1{
	top: -60px !important;
}
.pj-title h6{	
	border:none !important;
	outline:none !important;
}

.pj-title  h6{
	display: contents !important;
}
.pj-title{
    padding: 5px 0 !important;
    /* border-bottom: 1px solid #ffc0d8; */
}
.pj-titles{
    padding: 5px 0;
    /* border-bottom: 1px solid #ffc0d8; */
}
.pj-titles  h6{
	display: -webkit-inline-box !important;
}
.matchs-infos {
    margin-top: -3rem !important;
	position: absolute;
    right: 25px;
    vertical-align: middle;
    font-size: 12px;
}
p{
	margin-bottom:0px !important;
}
.mt-27{
	margin-top:1.5rem !important;
}
.mt-32{
	margin-top:1.8rem !important;
}

